# xml_structer

./: .gitignore  Cargo.toml  README.md  cli.rs  config.rs  lib.rs  main.rs
config/: default.toml
model/: mod.rs  xml_node.rs
processor/: mod.rs  struct_processor.rs
src/: cli.rs  lib.rs  main.rs  xsconfig.rs
src/processor/: mod.rs  struct_processor.rs  xml_struct.rs
src/utils/: fs_utils.rs  log_utils.rs  mod.rs
src/validation/: mod.rs  report.rs  validate.rs
src/wasm/: mod.rs  wasm_report.rs
tests/: invalid_tei.xml  struct_processor_tests.rs  valid_tei.xml  validate_tests.rs  xml_processor_tests.rs
tests/fixtures/: book1.xml  book2.xml  book_with_attrs.xml  nested_with_attrs.xml
utils/: log_utils.rs  mod.rs
