[package]
name = "xml_structer"
version = "0.1.0"
edition = "2021"

[dependencies]
# XML parsing - fast, read-only DOM tree
roxmltree = "0.20"

# Parallel directory traversal
jwalk = "0.8"

# Parallel processing
rayon = "1.10"

# Progress bar
indicatif = { version = "0.17", features = ["rayon"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Configuration
config = "0.14"

[dev-dependencies]
tempfile = "3.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
